tests/NormalTests/paczka1/fuzzy1/95843162.err
Error in line 9: dFBEEU974Q S565 7,5
Error in line 17: EZyYyOH A576 25,67
Error in line 12: ZNxXM S565 21,0
Error in line 23: S565 A576 78,5
Error in line 25: EZyYyOH A76 14,7
Error in line 21: dFBEEU974Q S565 48,7
